Fix issue #919 tag name are wrapped when contains space

--- a/src/Oro/Bundle/TagBundle/Resources/public/css/scss/tags-container.scss
+++ b/src/Oro/Bundle/TagBundle/Resources/public/css/scss/tags-container.scss
@@ -30,7 +30,8 @@
         line-height: $tag-item-line-height;
         transition: $hover-transition;
         height: $tag-item-height;
-
+        white-space: nowrap;
+        
         &:hover,
         &:focus {
             color: $tag-item-color;
